# dcus

./: CMakeLists.txt  README.md  config.cmake.in  config.h.in
cmake/: common.cmake  find_3rdparty.cmake  find_commonapi_core.cmake  find_commonapi_someip.cmake  find_dcus.cmake  find_dlt.cmake  find_fdbus.cmake  find_fiboivi.cmake  find_jemalloc.cmake  find_mimalloc.cmake  find_openssl.cmake  find_protobuf.cmake  find_pthread.cmake  find_qt5widgets.cmake  find_qtwidgets.cmake  find_ros.cmake  find_tcmalloc.cmake  find_vsomeip.cmake  platform.cmake  subproject.cmake
examples/: CMakeLists.txt
examples/client_simple/: CMakeLists.txt  simple.cpp
examples/client_viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewer.cpp
examples/worker_simple/: simple.cpp
examples/worker_viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewer.cpp
include/dcus/: ClientEngine  MasterEngine  ServerEngine  WorkerEngine  application.h  data.h  domain.h  elapsed.h  event.h  log.h  plugin.h  queue.h  semaphore.h  setting.h  singleton.h  thread.h  timer.h  transfer.h  upgrade.h  value.h
include/dcus/base/: application.h  data.h  define.h  domain.h  elapsed.h  event.h  log.h  plugin.h  queue.h  semaphore.h  setting.h  singleton.h  thread.h  timer.h  transfer.h  upgrade.h  value.h  variant.h
include/dcus/client/: client_engine.h  client_event.h  detail_message.h
include/dcus/master/: hawkbit_queue.h  master_engine.h  master_event.h  web_event.h  web_feed.h  web_init.h  web_queue.h
include/dcus/plugin/: interface.h  platform.h
include/dcus/server/: hawkbit_queue.h  server_engine.h  server_event.h  web_event.h  web_feed.h  web_init.h  web_queue.h
include/dcus/utils/: dir.h  dispatch.h  host.h  string.h  system.h  time.h  verify.h
include/dcus/worker/: detail_message.h  worker_engine.h  worker_event.h
plugins/: CMakeLists.txt
plugins/fdbus/: CMakeLists.txt  README.md
plugins/fdbus/client/: CMakeLists.txt
plugins/fdbus/interfaces/: CMakeLists.txt
plugins/fdbus/server/: fdbus.cpp
plugins/ros/: CMakeLists.txt  README.md
plugins/ros/client/: ros_lib.cpp
plugins/ros/interfaces/: CMakeLists.txt
plugins/ros/server/: CMakeLists.txt  ros.cpp
plugins/vsomeip/: CMakeLists.txt
plugins/vsomeip/client/: CMakeLists.txt
plugins/vsomeip/interfaces/: CMakeLists.txt  DCusInterfaces.fdepl  DCusInterfaces.fidl
plugins/vsomeip/interfaces/etc/: vsomeip-dcus-server.json
plugins/vsomeip/server/: CMakeLists.txt  vsomeip.cpp
rpcs/: CMakeLists.txt
rpcs/fdbus/: CMakeLists.txt  README.md
rpcs/fdbus/client/: CMakeLists.txt  fdbus_client.cpp  fdbus_lib.cpp
rpcs/fdbus/interfaces/: CMakeLists.txt  DCusInterfaces.proto
rpcs/fdbus/master/: CMakeLists.txt  fdbus.cpp
rpcs/fdbus/server/: CMakeLists.txt  fdbus.cpp  fdbus_server.cpp
rpcs/fdbus/worker/: CMakeLists.txt  fdbus_lib.cpp
rpcs/ros/: CMakeLists.txt  README.md
rpcs/ros/client/: ros_client.cpp  ros_lib.cpp
rpcs/ros/interfaces/: CMakeLists.txt  package.xml
rpcs/ros/master/: ros.cpp
rpcs/ros/server/: CMakeLists.txt  ros.cpp  ros_server.cpp
rpcs/ros/worker/: ros_lib.cpp
rpcs/vsomeip/: CMakeLists.txt  README.md
rpcs/vsomeip/client/: CMakeLists.txt  vsomeip_client.cpp  vsomeip_lib.cpp
rpcs/vsomeip/interfaces/: CMakeLists.txt  DCusInterfaces.fidl
rpcs/vsomeip/interfaces/etc/: vsomeip-dcus-client.json  vsomeip-dcus-master.json  vsomeip-dcus-worker.json
rpcs/vsomeip/master/: vsomeip.cpp
rpcs/vsomeip/server/: CMakeLists.txt  vsomeip.cpp  vsomeip_server.cpp
rpcs/vsomeip/worker/: vsomeip_lib.cpp
share/: dcus_master.conf.example  dcus_worker.conf.example
src/: CMakeLists.txt  application.cpp  data.cpp  domain.cpp  elapsed.cpp  log.cpp  plugin.cpp  queue.cpp  semaphore.cpp  thread.cpp  timer.cpp  transfer.cpp  upgrade.cpp  value.cpp
src/base/: application.cpp  data.cpp  domain.cpp  elapsed.cpp  log.cpp  plugin.cpp  queue.cpp  semaphore.cpp  thread.cpp  timer.cpp  transfer.cpp  upgrade.cpp  value.cpp  variant.cpp
src/client/: client_engine.cpp  detail_message.cpp
src/commonlib/: dir.cpp  dir.h  dispatch.cpp  dispatch.h  host.cpp  host.h  string.cpp  string.h  system.cpp  system.h  time.cpp  time.h  verify.cpp  verify.h
src/core/: config_http.h  core.h  distribute_http.cpp  download_http.cpp  helper.h  message_http.cpp  patch_bsdiff.cpp  pull_http.cpp  status.h  verify_openssl.cpp
src/corelib/: config_http.h  core.h  distribute_http.cpp  download_http.cpp  helper.h  message_http.cpp  patch_bsdiff.cpp  pull_http.cpp  verify_openssl.cpp
src/importlib/: dylib.hpp  dynalo.hpp  dynalo_linux.hpp  dynalo_mac.hpp  dynalo_win32.hpp  getopt.hpp  httplib.hpp  json11.cpp
src/master/: hawkbit_queue.cpp  master_engine.cpp  web_feed.cpp  web_init.cpp  web_queue.cpp
src/server/: hawkbit_queue.cpp  server_engine.cpp  web_feed.cpp  web_init.cpp  web_queue.cpp
src/utils/: dir.cpp  dispatch.cpp  host.cpp  string.cpp  system.cpp  time.cpp  verify.cpp
src/worker/: detail_message.cpp  worker_engine.cpp
test/: run_test.sh
tests/: run_test.sh
